--- a/pinch/templates/index.html
+++ b/pinch/templates/index.html
@@ -29,6 +29,8 @@
  		<div class="col-md-8 center">
 			<br /><br />
 			<a href="/walkthrough/" class="create-button">Create Project</a>
+			<br /><br />
+			<a href="http://hacktennessee.com/"><img src="/static/images/hack-tennessee.png" width="30%" class="hack-tn-logo" /></a>
 		</div>
  		<div class="col-md-2"></div>
 	</div>	
