--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -65,35 +65,44 @@
           <div class="hover">
             {{ project.name }}
           </div>
+          <div class="pill"></div>
         </div>
         <div class="col-md-1 step big-idea">
           <p>Big Idea</p>
           <div class="hover">
             {{ project.idea }}
           </div>
+          <div class="pill"></div>
         </div>
         <div class="col-md-1 step validate">
           <p>Validate</p>
           <div class="hover">
             {{ project.validate_value_prop }}
           </div>
+          <div class="pill"></div>
         </div>
         <div class="col-md-1 step create-mvp">
           <p>MVP</p>
           <div class="hover">
             {{ project.mvp.original_statement }}
           </div>
+          <div class="pill"></div>
         </div>
         <div class="col-md-1 step minify-mvp">
           <p>Minify</p>
           <div class="hover">
             {{ project.mvp.statement }}
           </div>
+          <div class="pill"></div>
         </div>
         <div class="col-md-1 step breakdown-mvp">
           <p>Breakdown</p>
+          <div class="pill"></div>
         </div>
-        <div class="col-md-1 step gravity-board">Gravity</div>
+        <div class="col-md-1 step gravity-board">
+          <p>Gravity</p>
+          <div class="pill"></div>
+        </div>
         <div class="col-md-3"></div>
       </div>
 
@@ -104,7 +113,6 @@
 
 	<div id="footer" class="hidden-xs">
 	   <div class="container clearfix">
-		  <a href="http://www.hacknashville.com/" target="_blank"><img src="/static/images/bahn5.png" align="left" height="60px"/></a>
 	      <p class="text-muted">
 			  <b>Built by Hackers, for Hackers.</b><br />
 			   Team: <em><a href="http://www.twitter.com/taylorrific" target="_blank">Taylor Schena</a>, <a href="http://www.twitter.com/CaleM" target="_blank">Cale Mooth</a>, 
