--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -99,6 +99,13 @@
           <p>Breakdown</p>
           <div class="pill"></div>
         </div>
+        <div class="col-md-1 step select-tools">
+            <p>Tech</p>
+            <div class="hover">
+                {{ project.tools }}
+            </div>
+            <div class="pill"></div>
+        </div>
         <div class="col-md-1 step gravity-board">
           <p>Gravity</p>
           <div class="pill"></div>
