--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -99,7 +99,7 @@
           <p>Breakdown</p>
           <div class="pill"></div>
         </div>
-        <div class="col-md-1 step select-tools">
+        <div class="col-md-1 step tech-and-tools">
             <p>Tech</p>
             <div class="hover">
                 {{ project.tools }}
