--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -7811,7 +7811,7 @@ button.close {
   position: absolute;
 }
 /* line 42, sass/pinch.scss */
-.steps .step:nth-child(8):before {
+.steps .step:nth-child(9):before {
   display: none;
 }
 /* line 44, sass/pinch.scss */
@@ -7890,7 +7890,7 @@ body.create .steps .create .pill {
 }
 
 /* line 103, sass/pinch.scss */
-body.big-idea .step.big-idea:hover .hover, body.big-idea .step.validate:hover .hover, body.big-idea .step.create-mvp:hover .hover, body.big-idea .step.minify-mvp:hover .hover {
+body.big-idea .step.big-idea:hover .hover, body.big-idea .step.validate:hover .hover, body.big-idea .step.create-mvp:hover .hover, body.big-idea .step.minify-mvp:hover .hover, body.big-idea .step.tech-and-tools:hover .hover {
   display: none;
 }
 /* line 107, sass/pinch.scss */
@@ -7907,7 +7907,7 @@ body.big-idea .create .pill {
 }
 
 /* line 118, sass/pinch.scss */
-body.validate .step.validate:hover .hover, body.validate .step.create-mvp:hover .hover, body.validate .step.minify-mvp:hover .hover {
+body.validate .step.validate:hover .hover, body.validate .step.create-mvp:hover .hover, body.validate .step.minify-mvp:hover .hover, body.validate .step.tech-and-tools:hover .hover {
   display: none;
 }
 /* line 122, sass/pinch.scss */
@@ -7924,7 +7924,7 @@ body.validate .steps .create .pill, body.validate .steps .big-idea .pill {
 }
 
 /* line 133, sass/pinch.scss */
-body.create-mvp .step.create-mvp:hover .hover, body.create-mvp .step.minify-mvp:hover .hover {
+body.create-mvp .step.create-mvp:hover .hover, body.create-mvp .step.minify-mvp:hover .hover, body.create-mvp .step.tech-and-tools:hover .hover {
   display: none;
 }
 /* line 137, sass/pinch.scss */
@@ -7941,7 +7941,7 @@ body.create-mvp .steps .create .pill, body.create-mvp .steps .big-idea .pill, bo
 }
 
 /* line 148, sass/pinch.scss */
-body.minify-mvp .step.minify-mvp:hover .hover {
+body.minify-mvp .step.minify-mvp:hover .hover, body.minify-mvp .step.tech-and-tools:hover .hover {
   display: none;
 }
 /* line 152, sass/pinch.scss */
@@ -7957,44 +7957,65 @@ body.minify-mvp .steps .create .pill, body.minify-mvp .steps .big-idea .pill, bo
   background-color: #f8bf51;
 }
 
-/* line 162, sass/pinch.scss */
+/* line 163, sass/pinch.scss */
+body.breakdown-mvp .step.tech-and-tools:hover .hover {
+  display: none;
+}
+/* line 167, sass/pinch.scss */
 body.breakdown-mvp .steps .breakdown-mvp {
   font-weight: bold;
 }
-/* line 164, sass/pinch.scss */
+/* line 169, sass/pinch.scss */
 body.breakdown-mvp .steps .breakdown-mvp .pill {
   background-color: #f8bf51;
 }
-/* line 166, sass/pinch.scss */
+/* line 171, sass/pinch.scss */
 body.breakdown-mvp .steps .create .pill, body.breakdown-mvp .steps .big-idea .pill, body.breakdown-mvp .steps .validate .pill, body.breakdown-mvp .steps .create-mvp .pill, body.breakdown-mvp .steps .minify-mvp .pill {
   background-color: #f8bf51;
 }
 
-/* line 172, sass/pinch.scss */
-body.gravity-board .steps .gravity-board {
+/* line 178, sass/pinch.scss */
+body.tech-and-tools .step.tech-and-tools:hover .hover {
+  display: none;
+}
+/* line 182, sass/pinch.scss */
+body.tech-and-tools .steps .tech-and-tools {
   font-weight: bold;
 }
-/* line 174, sass/pinch.scss */
-body.gravity-board .steps .gravity-board .pill {
+/* line 184, sass/pinch.scss */
+body.tech-and-tools .steps .tech-and-tools .pill {
   background-color: #f8bf51;
 }
-/* line 176, sass/pinch.scss */
-body.gravity-board .steps .create .pill, body.gravity-board .steps .big-idea .pill, body.gravity-board .steps .validate .pill, body.gravity-board .steps .create-mvp .pill, body.gravity-board .steps .minify-mvp .pill, body.gravity-board .steps .breakdown-mvp .pill {
+/* line 186, sass/pinch.scss */
+body.tech-and-tools .steps .create .pill, body.tech-and-tools .steps .big-idea .pill, body.tech-and-tools .steps .validate .pill, body.tech-and-tools .steps .create-mvp .pill, body.tech-and-tools .steps .minify-mvp .pill, body.tech-and-tools .steps .breakdown-mvp .pill {
   background-color: #f8bf51;
 }
 
-/* line 180, sass/pinch.scss */
+/* line 192, sass/pinch.scss */
+body.gravity-board .steps .gravity-board {
+  font-weight: bold;
+}
+/* line 194, sass/pinch.scss */
+body.gravity-board .steps .gravity-board .pill {
+  background-color: #f8bf51;
+}
+/* line 196, sass/pinch.scss */
+body.gravity-board .steps .create .pill, body.gravity-board .steps .big-idea .pill, body.gravity-board .steps .validate .pill, body.gravity-board .steps .create-mvp .pill, body.gravity-board .steps .minify-mvp .pill, body.gravity-board .steps .breakdown-mvp .pill, body.gravity-board .steps .select-tools .pill {
+  background-color: #f8bf51;
+}
+
+/* line 200, sass/pinch.scss */
 .hack-tn-logo {
   margin: 60px 0;
 }
 
-/* line 187, sass/pinch.scss */
+/* line 207, sass/pinch.scss */
 html {
   position: relative;
   min-height: 100%;
 }
 
-/* line 192, sass/pinch.scss */
+/* line 212, sass/pinch.scss */
 body {
   background: #f8f7f7;
   color: #333333;
@@ -8004,7 +8025,7 @@ body {
   margin-bottom: 110px;
 }
 
-/* line 201, sass/pinch.scss */
+/* line 221, sass/pinch.scss */
 #footer {
   position: absolute;
   bottom: 0;
@@ -8017,22 +8038,22 @@ body {
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #EEE;
 }
-/* line 212, sass/pinch.scss */
+/* line 232, sass/pinch.scss */
 #footer img {
   margin: 5px 15px 5px 5px;
 }
 
-/* line 215, sass/pinch.scss */
+/* line 235, sass/pinch.scss */
 body.home .steps {
   display: none;
 }
 
-/* line 216, sass/pinch.scss */
+/* line 236, sass/pinch.scss */
 body.gravity-board #footer {
   display: none !important;
 }
 
-/* line 218, sass/pinch.scss */
+/* line 238, sass/pinch.scss */
 .clear {
   clear: both;
   height: 0px;
@@ -8040,7 +8061,7 @@ body.gravity-board #footer {
   font-size: 0px;
 }
 
-/* line 219, sass/pinch.scss */
+/* line 239, sass/pinch.scss */
 .strikethrough {
   text-decoration: line-through;
   padding: 2px 4px;
@@ -8050,17 +8071,17 @@ body.gravity-board #footer {
   border-radius: 4px;
 }
 
-/* line 227, sass/pinch.scss */
+/* line 247, sass/pinch.scss */
 .highlight {
   background-color: yellow;
 }
 
-/* line 230, sass/pinch.scss */
+/* line 250, sass/pinch.scss */
 .center {
   text-align: center;
 }
 
-/* line 232, sass/pinch.scss */
+/* line 252, sass/pinch.scss */
 .create-button {
   background-color: #AAA;
   border-top: none;
@@ -8074,23 +8095,23 @@ body.gravity-board #footer {
   padding: 5px 15px;
 }
 
-/* line 244, sass/pinch.scss */
+/* line 264, sass/pinch.scss */
 .create-button:hover {
   background-color: #f8bf51;
   color: #FFF;
   text-decoration: none;
 }
 
-/* line 256, sass/pinch.scss */
+/* line 276, sass/pinch.scss */
 h1 {
   font-weight: 300;
 }
-/* line 258, sass/pinch.scss */
+/* line 278, sass/pinch.scss */
 h1 span {
   font-size: .4em;
 }
 
-/* line 261, sass/pinch.scss */
+/* line 281, sass/pinch.scss */
 h2 {
   font-size: 1.5em;
   font-style: italic;
@@ -8098,56 +8119,56 @@ h2 {
   margin-top: 5px;
   margin-bottom: 30px;
 }
-/* line 262, sass/pinch.scss */
+/* line 282, sass/pinch.scss */
 h2 span {
   font-weight: normal;
 }
 
-/* line 266, sass/pinch.scss */
+/* line 286, sass/pinch.scss */
 .minify-mvp h3, .breakdown-mvp h3 {
   background-color: #feebc5;
   display: inline-block;
   font-weight: bold;
 }
 
-/* line 275, sass/pinch.scss */
+/* line 295, sass/pinch.scss */
 form label {
   font-weight: 300;
   margin-top: 20px;
 }
-/* line 279, sass/pinch.scss */
+/* line 299, sass/pinch.scss */
 form input[type="text"], form input[type="email"], form textarea.form-control {
   border: 1px solid #dddfe0;
   border-radius: 0;
   box-shadow: none;
   font-size: 21px;
 }
-/* line 285, sass/pinch.scss */
+/* line 305, sass/pinch.scss */
 form input[type="text"].form-control, form input[type="email"].form-control {
   height: 50px;
 }
-/* line 288, sass/pinch.scss */
+/* line 308, sass/pinch.scss */
 form .add-member-button {
   margin-top: 10px;
 }
-/* line 291, sass/pinch.scss */
+/* line 311, sass/pinch.scss */
 form textarea.form-control {
   padding: 10px 15px;
   height: 10em;
 }
-/* line 295, sass/pinch.scss */
+/* line 315, sass/pinch.scss */
 form .codeholder {
   background: #f8f7f7;
   border: none;
   padding: 0;
   margin-bottom: 15px;
 }
-/* line 297, sass/pinch.scss */
+/* line 317, sass/pinch.scss */
 form .CodeMirror-code pre {
   font-size: 30px;
 }
 
-/* line 303, sass/pinch.scss */
+/* line 323, sass/pinch.scss */
 button[type="submit"] {
   background-color: #f8bf51;
   border-top: none;
@@ -8160,11 +8181,11 @@ button[type="submit"] {
   font-weight: 300;
   margin-bottom: 40px;
 }
-/* line 314, sass/pinch.scss */
+/* line 334, sass/pinch.scss */
 button[type="submit"].btn {
   border-radius: 0;
 }
-/* line 317, sass/pinch.scss */
+/* line 337, sass/pinch.scss */
 button[type="submit"].ready {
   float: none;
   font-size: 18px;
@@ -8172,7 +8193,7 @@ button[type="submit"].ready {
   margin-bottom: 0;
 }
 
-/* line 333, sass/pinch.scss */
+/* line 353, sass/pinch.scss */
 .step-icon div.big-idea {
   background: url("/static/images/icon-big-idea.png") no-repeat 0 0;
   width: 64px;
@@ -8190,20 +8211,20 @@ button[type="submit"].ready {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 333, sass/pinch.scss */
+  /* line 353, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 333, sass/pinch.scss */
+  /* line 353, sass/pinch.scss */
   .step-icon div.big-idea {
     background: url("/static/images/icon-big-idea@2x.png");
     background-size: 64px 97px;
   }
 }
-/* line 342, sass/pinch.scss */
+/* line 362, sass/pinch.scss */
 .step-icon div.create-project {
   background: url("/static/images/create-project.png") no-repeat 0 0;
   width: 64px;
@@ -8221,20 +8242,20 @@ button[type="submit"].ready {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 342, sass/pinch.scss */
+  /* line 362, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 342, sass/pinch.scss */
+  /* line 362, sass/pinch.scss */
   .step-icon div.create-project {
     background: url("/static/images/create-project@2x.png");
     background-size: 64px 65px;
   }
 }
-/* line 351, sass/pinch.scss */
+/* line 371, sass/pinch.scss */
 .step-icon div.validate {
   background: url("/static/images/validate.png") no-repeat 0 0;
   width: 64px;
@@ -8252,20 +8273,20 @@ button[type="submit"].ready {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 351, sass/pinch.scss */
+  /* line 371, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 351, sass/pinch.scss */
+  /* line 371, sass/pinch.scss */
   .step-icon div.validate {
     background: url("/static/images/validate@2x.png");
     background-size: 64px 40px;
   }
 }
-/* line 360, sass/pinch.scss */
+/* line 380, sass/pinch.scss */
 .step-icon div.create-mvp {
   background: url("/static/images/icon-create-mvp.png") no-repeat 0 0;
   width: 64px;
@@ -8283,20 +8304,20 @@ button[type="submit"].ready {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 360, sass/pinch.scss */
+  /* line 380, sass/pinch.scss */
   .step-icon div.create-mvp {
     background: url("/static/images/icon-create-mvp@2x.png");
     background-size: 64px 46px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 360, sass/pinch.scss */
+  /* line 380, sass/pinch.scss */
   .step-icon div.create-mvp {
     background: url("/static/images/icon-create-mvp@2x.png");
     background-size: 64px 46px;
   }
 }
-/* line 369, sass/pinch.scss */
+/* line 389, sass/pinch.scss */
 .step-icon div.minify-mvp {
   background: url("/static/images/icon-minify-mvp.png") no-repeat 0 0;
   width: 64px;
@@ -8314,20 +8335,20 @@ button[type="submit"].ready {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 369, sass/pinch.scss */
+  /* line 389, sass/pinch.scss */
   .step-icon div.minify-mvp {
     background: url("/static/images/icon-minify-mvp@2x.png");
     background-size: 64px 42px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 369, sass/pinch.scss */
+  /* line 389, sass/pinch.scss */
   .step-icon div.minify-mvp {
     background: url("/static/images/icon-minify-mvp@2x.png");
     background-size: 64px 42px;
   }
 }
-/* line 378, sass/pinch.scss */
+/* line 398, sass/pinch.scss */
 .step-icon div.breakdown-mvp {
   background: url("/static/images/icon-breakdown-mvp.png") no-repeat 0 0;
   width: 64px;
@@ -8345,36 +8366,67 @@ button[type="submit"].ready {
     }*/
 }
 @media (-webkit-min-device-pixel-ratio: 2) {
-  /* line 378, sass/pinch.scss */
+  /* line 398, sass/pinch.scss */
   .step-icon div.breakdown-mvp {
     background: url("/static/images/icon-breakdown-mvp@2x.png");
     background-size: 64px 47px;
   }
 }
 @media (min-resolution: 192dpi) {
-  /* line 378, sass/pinch.scss */
+  /* line 398, sass/pinch.scss */
   .step-icon div.breakdown-mvp {
     background: url("/static/images/icon-breakdown-mvp@2x.png");
     background-size: 64px 47px;
   }
 }
+/* line 407, sass/pinch.scss */
+.step-icon div.tech-and-tools {
+  background: url("/static/images/tools-tech.png") no-repeat 0 0;
+  width: 64px;
+  height: 65px;
+  /*  Using retina image support
+   *  #my-element {
+   *    background:url('http://link.to/low-res-image.png');
+   *    @include respond-to(retina-display) {
+   *      background:url('http://link.to/high-res-image.png');
+   *      background-size:202px 27px; <-- Size of the low-res image
+   *  }
+   */
+  /*  @else if $media == wide-screens {
+      @media only screen and (min-width: $break-large) { @content; }
+    }*/
+}
+@media (-webkit-min-device-pixel-ratio: 2) {
+  /* line 407, sass/pinch.scss */
+  .step-icon div.tech-and-tools {
+    background: url("/static/images/tools-tech@2x.png");
+    background-size: 64px 65px;
+  }
+}
+@media (min-resolution: 192dpi) {
+  /* line 407, sass/pinch.scss */
+  .step-icon div.tech-and-tools {
+    background: url("/static/images/tools-tech@2x.png");
+    background-size: 64px 65px;
+  }
+}
 
-/* line 396, sass/pinch.scss */
+/* line 425, sass/pinch.scss */
 .info-panel {
   background-color: #feebc5;
   font-size: 16px;
   padding: 15px;
 }
-/* line 400, sass/pinch.scss */
+/* line 429, sass/pinch.scss */
 .info-panel h3 {
   padding-top: 0px;
   margin-top: 0px;
 }
-/* line 401, sass/pinch.scss */
+/* line 430, sass/pinch.scss */
 .info-panel p {
   margin-bottom: 5px;
 }
-/* line 402, sass/pinch.scss */
+/* line 431, sass/pinch.scss */
 .info-panel p.example {
   font-size: 12px;
   font-style: italic;
@@ -8382,19 +8434,19 @@ button[type="submit"].ready {
   line-height: 14px;
   margin-bottom: 15px;
 }
-/* line 403, sass/pinch.scss */
+/* line 432, sass/pinch.scss */
 .info-panel .strike {
   text-decoration: line-through;
   padding: 2px;
 }
 
-/* line 412, sass/pinch.scss */
+/* line 441, sass/pinch.scss */
 .venn {
   background: url("/static/images/venn-diagram.png") no-repeat center 0;
   background-size: contain;
   min-height: 800px;
 }
-/* line 416, sass/pinch.scss */
+/* line 445, sass/pinch.scss */
 .venn textarea {
   background: transparent;
   border: none;
@@ -8408,44 +8460,44 @@ button[type="submit"].ready {
   vertical-align: bottom;
   width: 100%;
 }
-/* line 428, sass/pinch.scss */
+/* line 457, sass/pinch.scss */
 .venn textarea:focus {
   outline: none;
 }
-/* line 431, sass/pinch.scss */
+/* line 460, sass/pinch.scss */
 .venn textarea#offering {
   padding-left: 30px;
 }
-/* line 432, sass/pinch.scss */
+/* line 461, sass/pinch.scss */
 .venn textarea#valueProp {
   padding-right: 30px;
   padding-left: 30px;
 }
-/* line 433, sass/pinch.scss */
+/* line 462, sass/pinch.scss */
 .venn textarea#customer {
   padding-right: 30px;
 }
 @media only screen and (max-width: 1200px) {
-  /* line 437, sass/pinch.scss */
+  /* line 466, sass/pinch.scss */
   .venn textarea {
     margin-top: 90px;
     height: 245px;
   }
 }
 @media only screen and (max-width: 990px) {
-  /* line 443, sass/pinch.scss */
+  /* line 472, sass/pinch.scss */
   .venn textarea {
     height: 300px;
     margin-top: 115px;
   }
-  /* line 447, sass/pinch.scss */
+  /* line 476, sass/pinch.scss */
   .venn .form-group.col-md-4 {
     float: left;
     width: 33%;
   }
 }
 @media only screen and (max-width: 650px) {
-  /* line 453, sass/pinch.scss */
+  /* line 482, sass/pinch.scss */
   .venn textarea {
     font-size: 18px;
     margin-top: 90px;
@@ -8453,7 +8505,7 @@ button[type="submit"].ready {
   }
 }
 @media only screen and (max-width: 530px) {
-  /* line 460, sass/pinch.scss */
+  /* line 489, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 75px;
@@ -8461,14 +8513,14 @@ button[type="submit"].ready {
   }
 }
 @media only screen and (max-width: 500px) {
-  /* line 467, sass/pinch.scss */
+  /* line 496, sass/pinch.scss */
   .venn textarea {
     font-size: 15px;
     margin-top: 55px;
     height: 160px;
   }
 }
-/* line 473, sass/pinch.scss */
+/* line 502, sass/pinch.scss */
 .venn .validate-action {
   margin-top: 100px;
 }
