--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -145,6 +145,7 @@
     <script src="{% static 'js/jquery-ui-1.10.4.min.js' %}"></script>
     <script src="{% static 'js/knockout-3.1.0.js' %}"></script>
     <script src="{% static 'js/knockout-sortable-0.8.6.min.js' %}"></script>
+    <script src="{% static 'js/happy-0.8.js' %}"></script>
 
     {% block extra_js %}{% endblock extra_js %}
     <script>
