--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -87,6 +87,9 @@
               return /.+?@.+?\..+/.test(value);
             }
           }
+        },
+        classes: {
+          message: "validate_tooltip"
         }
       })
     })
